# ai-content-factory

./: .gitignore  README.md  pyproject.toml  quick_test.py  run_web_ui.py  setup_web_ui.py  test_brand_voice_embeddings.py
metrics_logs/: metrics_history.csv  metrics_history.json  research_data.json  seo_content_briefs.json  seo_keyword_research.json  topic_analysis.json
src/ai_content_factory/: __init__.py  example.py  example_enhanced.py  main.py  quick_brand_test.py  test_multiple_brands.py  validate_ticket_8.py
src/ai_content_factory/agents/: brand_voice_agent.py  content_writer_agent.py  research_agent.py  seo_agent.py
src/ai_content_factory/api/: __init__.py  app.py
src/ai_content_factory/api/static/: app.js  index.html  styles.css
src/ai_content_factory/config/: .yaml  config.yaml  config_loader.py
src/ai_content_factory/core/: brand_config.py  brand_voice_documenter.py  brand_voice_embeddings.py  brand_voice_system.py  content_ingestion_pipeline.py  few_shot_prompt_builder.py  file_utils.py  metrics.py  metrics_logger.py
src/ai_content_factory/core/ingestors/: example_content_ingestor.py
src/ai_content_factory/database/: chroma_manager.py
src/ai_content_factory/llm/: __init__.py  ollama_provider.py
src/ai_content_factory/mypackages/: consistency_checker.py  tone_analyzer.py
src/ai_content_factory/sample_data/: brand_voice_sample.json  brand_voice_samples.json
src/ai_content_factory/scripts/: generate_brand_embeddings.py  load_brand_voice.py
src/ai_content_factory/testing/: brand_testing_framework.py  multi_brand_comparison.py
src/ai_content_factory/utils/: exceptions.py  logger.py
tests/: test_metrics_validation.py
