[project]
name = "ai-content-factory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mariam-Srour2003", email = "mariammsrourr2020@gmail.com@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ai-content-factory = "ai_content_factory:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
